# ssvm_standalone

./: .gitignore  CMakeLists.txt  CMakeLists_common.txt  Readme.md  Readme.txt  config_sample.txt  howto.txt  notes.txt
core/: Config.cpp  Config.h  F_3dRays.h  F_ColorHistogram.cpp  F_Combo.cpp  F_Filter.cpp  F_Histogram.cpp  F_Histogram.h  F_LoadFromFile.cpp  F_OrientedHistogram.cpp  Feature.cpp  Slice.cpp  Slice3d.cpp  Slice_P.cpp  colormap.h  constraint_set.cpp  energyParam.cpp  gettimeofday.c  gettimeofday.h  globals.h  globalsE.h  inference.cpp  inference.h  inference_globals.h  oSVM.cpp  predict.cpp  predict.h  predictExample.cpp  predict_mbest.cpp  svm.h  svm_struct_api.c  svm_struct_api.h  svm_struct_api_types.h  svm_struct_globals.h  svm_struct_learn_custom.c  train.c  trainExample.c  utils.cpp  utils.h  utils_ITK.h
core/.svn/: all-wcprops  entries
core/.svn/text-base/: Config.cpp.svn-base  F_3dRays.cpp.svn-base  F_GradientStats.cpp.svn-base  F_Histogram.h.svn-base  Slice3d.cpp.svn-base  Slice3d.h.svn-base  Slice_P.h.svn-base  constraint_set.h.svn-base  gi_libDAI.cpp.svn-base  gi_maxflow.h.svn-base  gi_sampling.cpp.svn-base  globalsE.h.svn-base  graphInference.h.svn-base  inference_globals.h.svn-base  oSVM.h.svn-base  svm_struct_api.c.svn-base  svm_struct_api.h.svn-base  svm_struct_learn_custom.c.svn-base  svm_struct_learn_custom.h.svn-base  utils.h.svn-base
core/.svn/tmp/: globals.h.tmp  predict.cpp.2.tmp  predict.cpp.tmp
core/svm_light/: svm_common.c
core/svm_light/.svn/: all-wcprops  entries
core/svm_light/.svn/text-base/: svm_learn.c.svn-base
core/svm_struct/: svm_struct_learn.c
core/svm_struct/.svn/: all-wcprops  entries
lib/auxItk/: AllEigenVectorsOfHessian.cxx  AllEigenVectorsOfHessian2.cxx  AllEigenVectorsOfHessian2.h  BinaryErodeDilateSynapseImageFilter.cxx  EigenOfHessianImageFilter.cxx  EigenOfStructureTensorImageFilter.cxx  EigenOfStructureTensorImageFilter2.cxx  EigenOfStructureTensorImageFilter2.h  GaussianImageFilter.cxx  GradientMagnitudeImageFilter.cxx  GradientMagnitudeImageFilter2.cxx  GradientMagnitudeImageFilter2.h  LoGImageFilter.cxx  RepolarizeYVersorWithGradient.cxx  RepolarizeYVersorWithGradient2.cxx  RepolarizeYVersorWithGradient2.h  SingleEigenVectorOfHessian.cxx  SingleEigenVectorOfHessian2.cxx  SingleEigenVectorOfHessian2.h  SymmetricEigenAnalysisTest.h  computeSynapseFeatures.py  itkStructureTensorRecursiveGaussianImageFilter.h  itkStructureTensorRecursiveGaussianImageFilter.txx  volume.tif
lib/graphCuts/: block.h  example.cpp  kgraph.h
lib/graphCuts/.svn/: all-wcprops  entries
lib/libDAI024/: CMakeLists.txt  Makefile
lib/slic/: CMakeLists.txt  Makefile
sampledata/: configexample.txt  configexample_advanced.txt  configexample_win.txt  configexample_win_advanced.txt
